Fix to compile on Java 17